<resources>
    <string name="app_name">TaxiAlaan </string>
    <string name="successful_operation">Successful Operation</string>
    <string name="balance_is_not_enough">Balance Is Not Enough</string>
    <string name="wallet_not_found">Wallet Not Found!</string>
    <string name="transactions_list">Transactions List</string>
    <string name="charge_code_applied_successfully">Charge Code Applied Successfully</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="request_has_been_sent_successfully">Request Has Been Sent Successfully</string>
    <string name="balance_is_low">Balance Is Low!</string>
    <string name="accounts_charge">Accounts Charge</string>
    <string name="send_money">Send Money</string>
    <string name="commission_wallet">Commission</string>
    <string name="remain_balance">Remain Balance</string>
    <string name="charge_by_cash">Charge by cash</string>
    <string name="charge_by_code">Charge by code</string>
    <string name="transfered_by_user">Transfered by user</string>
    <string name="transfered_to_user">Transfered to user</string>
    <string name="transfered_by_provider">Transfered by provider</string>
    <string name="transfered_to_provider">Transfered to provider</string>
    <string name="trip">Trip</string>
    <string name="withdraw">Withdraw</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="request">Request</string>
    <string name="wallet_id">Wallet id</string>
    <string name="balance">Balance</string>
    <string name="charge_code">Charge Code</string>
    <string name="send">Send</string>
    <string name="invalid_charge_code">Invalid Charge Code</string>
    <string name="are_you_sure_for_send_money_to">Are you sure for send money to</string>
    <string name="please_enter_your_code">Please enter your code</string>
    <string name="please_enter_wallet_id">Please enter  wallet id</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="amount">Amount</string>
    <string name="wallet_commission">Commission</string>
    <string name="google_map_api">AIzaSyCa3yhDGMZM2xHCc5ieYeyz87SuHYDzozU</string>
    <string name="FACEBOOK_APP_ID">359761777950789</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">cffb71497692ebdaeb0e488fd1cc1e45</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="get_moving_with_taxialaan">Get moving with TaxiAlaan - Iraq</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>
    <string name="or_connect_with_social_media">Or connect with social</string>
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no">9876543210</string>
    <string name="password_txt">******</string>
    <string name="Introducer_code">Introducer Code</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where to? (Optional)</string>
    <string name="selected_option">Economy</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="change">Change</string>
    <string name="request_xuber">Request Ride</string>
    <string name="cash">Cash</string>
    <string name="schedule">Schedule a Ride</string>
    <string name="change_date">Change</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="service_list_item">Jaguar</string>
    <string name="no_service">No Services found</string>
    <string name="no_route">There is no route, choose different destination</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="approximate">Estimation Fare</string>
    <string name="eta_time">ETA</string>
    <string name="sample_rate">$1234</string>
    <string name="include_all">Including all other charges</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirm">Confirm</string>
    <string name="sample_address">110, StJoseph Chruch, Richards, road Newyork</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding captain</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the ride?</string>
    <string name="no_providers_found">No one found at the moment to take your ride, Please try after sometime</string>
    <string name="no_drivers_found">No captains available to take your trip</string>
    <string name="driver_busy">Your trip was cancelled by the captain.Please contact us for support</string>
    <string name="retry">Retry Now</string>
    <string name="try_later">Later</string>
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
     <string name="estimated_first">Taxi will arrive in:</string>
     <string name="estimated_secode">min</string>
    <string name="card">Card</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="sample_card_no">XXXX - XXXX - XXXX - XXXX</string>
    <string name="month_and_year">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_confirm">Confirm Exit ?</string>
    <string name="no_routes_available">no routes available</string>
    <string name="request_reject">Request rejected</string>
    <string name="request_accept">Request accepted</string>
    <string name="arrived">Captain has arrived at your location</string>
    <string name="picked_up">Enjoy your ride</string>
    <string name="dropped">Ride has completed</string>
    <string name="apply">Apply</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past trips</string>
    <string name="your_trips">Your Trips</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="pasttrip">Past Trips</string>
    <string name="upcomingtrip">Upcoming Trips</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="sample_base_price">$10000</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="Travel_costs">Travel Costs</string>
    <string name="Discount">Discount</string>
    <string name="rate_provider">Rate your trip with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Your location</string>
    <string name="destination_location">Where to?</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="cencel_request">Are you sure you want to cancel the ride?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="pls_wait">Please wait...</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="expired_coupon">Sorry, coupon has expired</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="enter_the_code">Enter the coupon code</string>
    <string name="wallet_balance">Your wallet amount is</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="contact_us">Contact Us</string>
    <string name="coupon">Coupon</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="register_title">Enter your details for registration</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy Policy</string>
    <string name="welcome_back_enter_otp_to_continue">Enter OTP to continue</string>
    <string name="otp_not_received_resend_again">OTP not received, Resend again</string>
    <string name="resend_otp">Resend OTP</string>
</resources>