<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">


        <item
            android:visible="false"
            android:id="@+id/nav_home"
            android:title="Payment"
            />

        <item
            android:visible="true"
            android:id="@+id/nav_wallet_manager"
            android:icon="@drawable/utility"
            android:title="@string/wallet"
            />
        <item
            android:id="@+id/nav_payment"
            android:title="@string/payment"
            android:icon="@drawable/utility"

            />
        <item
            android:id="@+id/nav_yourtrips"
            android:title="@string/your_trips"
            android:icon="@drawable/trip"/>
        <item
            android:id="@+id/nav_coupon"
            android:title="@string/coupon"
            android:icon="@drawable/coupon"/>
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/wallet"
            android:visible="false"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:visible="true"
            android:icon="@drawable/settings"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/contact_us"
            android:icon="@drawable/contactus"/>

        <item
            android:id="@+id/nav_privacy"
            android:title="@string/privacy"
            android:icon="@drawable/privacy_policy"/>

        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/share"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

    <item
        android:visible="false"
        android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share1"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
