<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_white" />

        <com.taxialaan.app.Utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/send_money"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_id"
            android:inputType="number"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            android:layout_marginTop="8dp" />


        <com.taxialaan.app.Utils.MyButton
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/send"
            android:textColor="@color/text_color_white" />
    </LinearLayout>


</LinearLayout>
