<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_icon" />

            <com.taxialaan.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_title"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_14sdp" />

            <com.taxialaan.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/phone_number"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/shadow_view">


                <ImageView
                    android:id="@+id/countryImage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/flag_iraq"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/countryNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_toEndOf="@+id/countryImage"
                    android:gravity="center"
                    android:text="+964"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/countryNumber"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>


            <com.taxialaan.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.taxialaan.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>


            <com.taxialaan.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/Introducer_code"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:hint="@string/Introducer_code"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_right" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>