<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon" />

        <com.taxialaan.app.Utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/welcome_back_enter_otp_to_continue"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_16sdp" />

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:textAlignment="viewStart"
                android:inputType="textWebPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>-->

        <com.chaos.view.PinView
            android:id="@+id/pvOTP"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/black_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/black_text_color"
            app:cursorWidth="@dimen/_1sdp"
            app:hideLineWhenFilled="false"
            app:itemCount="4"
            app:itemHeight="@dimen/_35sdp"
            app:itemRadius="@dimen/_2sdp"
            app:itemSpacing="15dp"
            app:itemWidth="@dimen/_35sdp"
            app:lineColor="@color/black_text_color"
            app:lineWidth="@dimen/_2sdp"
            app:viewType="rectangle" />

        <com.taxialaan.app.Utils.MyTextView
            android:visibility="visible"
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/com_facebook_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/password_layout"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:visibility="invisible"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.taxialaan.app.Utils.MyTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/i_need_to_create_an_account"
                android:textColor="@color/com_facebook_blue"
                android:textSize="14sp" />

            <com.taxialaan.app.Utils.MyTextView
                android:visibility="visible"
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/otp_not_received_resend_again"
                android:textColor="@color/com_facebook_blue"
                android:textSize="14sp" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6606021354718512/7123028891">

            </com.google.android.gms.ads.AdView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:src="@drawable/ic_arrow_right"
            android:layout_margin="@dimen/_20sdp"/>


    </LinearLayout>


</RelativeLayout>